# mailing_service

./: .env  .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: apps.py  forms.py  models.py  scheduler.py  urls.py  views.py
mailings/management/commands/: init_roles.py
templates/: base.html
templates/mailings/: attempt_list.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
templates/users/: edit_profile.html  login.html  profile.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
