[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = "Сервис рассылок на Django с авторизацией, отправкой писем, ролями и планировщиком."
authors = ["https://github.com/Ex6sTy"]
readme = "README.md"
packages = [{ include = "mailing_service" }]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
celery = "^5.3.6"
redis = "^6.0.0"
pillow = "^11.2.0"
django-apscheduler = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

